--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,26 +14,26 @@
   </head>
   <body>
     <header>
-      <div class="">
-        <h1>Vincent's Restaurant</h1>
-        <p>Finest Restaurant in downtown NYC</p>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Vincent's Restaurant is opening a new location!</h1>
+          <p class="lead">Finest Restaurant in downtown NYC</p>
+        </div>
       </div>
     </header>
     <hr>
-    <div class="navContainer">
-      <nav class="container">
-        <div class="row">
-          <div class="col-sm">
-            <a href="index.html">Home</a>
-          </div>
-          <div class="col-sm">
-            <a href="Menu.html">Menu</a>
-          </div>
-          <div class="col-sm">
-            <a href="contact.html">Contact Us</a>
-          </div>
-        </div>
-      </nav>
+    <div class="">
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="menu.html">Menu</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+        </li>
+      </ul>
     </div>
     <hr>
     <section class="descriptionSection">
