--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <!-- external css -->
     <link rel="stylesheet" href="styles/restaurantStyles.css">
+    <!-- icon CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style media="screen">
       .formContainer{
         margin: 50px 20%
@@ -49,7 +51,7 @@
     <div class="">
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="index.html"><i class="fa fa-home homeBtn"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="menu.html">Menu</a>
