--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial scale=1, shrink to fit=no">
+    <meta name="viewport" content="width=device-width">
     <title>Vincent's Restaurant</title>
     <!-- bootstrap cdn -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -35,6 +35,43 @@
       </ul>
     </div>
     <hr>
+    <!-- carousel -->
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div id="carousel-example-generic" class="carousel slide centerImg" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img class="resizeImg"src="images/new1.jpg" alt="First Slide" />
+                <div class="carousel-caption">
+                  <h2>We're opening a new location!</h2>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <img class="resizeImg" src="images/seasonalDish.jpg" alt="Second Slide" />
+                <div class="carousel-caption">
+                  <h2>We're rolling out our seasonal menu, with special options for this season.</h2>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <img class="resizeImg" src="images/brew1.jpg" alt="Third Slide" />
+                <div class="carousel-caption">
+                  <h2>The Drink of the Month is SG Special Brew.</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <section class="descriptionSection">
       <article class="description">
         <img src="images/vinrestaurant.jpg" alt="restaurant's image" style="max-width: 100%; height: auto; border-radius: 2px; display: block; margin: 20px auto 20px;">
@@ -60,11 +97,11 @@
         <p>123-456-7890</p>
       </div>
     </footer>
+    <!-- script from scripts file -->
+    <script src="scripts/script.js"></script>
     <!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/esm/popper-utils.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap-grid.css"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
